--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -40,6 +40,7 @@
     "dedent": "^0.7.0",
     "deepmerge": "^4.2.2",
     "glob": "^7.1.3",
+    "mocha": "^8.1.3",
     "prompts": "^2.1.0",
     "semver": "^6.1.0"
   },
