--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@open-wc/create",
-  "version": "0.33.2",
+  "version": "0.33.3",
   "publishConfig": {
     "access": "public"
   },
@@ -50,6 +50,7 @@
     "@babel/register": "^7.9.0",
     "babel-plugin-transform-dynamic-import": "^2.1.0",
     "chai-fs": "^2.0.0",
-    "onchange": "^5.2.0"
+    "onchange": "^5.2.0",
+    "mocha": "^6.2.2"
   }
 }
